# ASSOCIATION-OF-LIBERIANS-IN-MUSANZE

./: .gitignore  Dockerfile  Procfile  README.md  bower.json  build.sh  election_title.txt  render.yaml  requirements.txt
Desktop/ALM VOTING SYSTEM/voting/templates/voting/: login.html
Desktop/pos/: .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
Desktop/pos/pos/: settings.py
Desktop/pos/posApp/: views.py
Desktop/pos/posApp/templates/posApp/: base.html  pos.html  receipt.html
account/: middleware.py  urls.py  views.py
account/management/commands/: create_superuser.py
account/migrations/: 0002_alter_customuser_id.py
account/templates/voting/: register.html
administrator/: urls.py  views.py
administrator/templates/: bio.html  footer.html  header.html  navbar.html  root.html  sidebar.html
administrator/templates/admin/: ballot_position.html  candidates.html  home.html  positions.html  print.html  voters.html  votes.html
e_voting/: .env  settings.py  urls.py  wsgi.py
voting/: admin_views.py  forms.py  models.py  urls.py  views.py
voting/migrations/: 0002_voter_academic_level_voter_address_and_more.py  0003_alter_candidate_id_alter_position_id_alter_voter_id_and_more.py
voting/static/css/: custom.css
voting/templates/voting/: base.html  login.html  reg.html
voting/templates/voting/voter/: ballot.html
